Fix 'Duplicate Composition Association when rename it's variable in the tree View'

When connecting two classes by means of a 'composition',
a relationship was previously created twice. Once in
ToolBarStateAssociation::setSecondWidget() and the second
time in UMLWidget::updateWidget(), which is triggered by
the 'modified' signal when calling UMLClassifier::addAttribute().

BUG:415992
FIXED-IN:2.30.2 (KDE Applications 19.12.2)